--- a/index.html
+++ b/index.html
@@ -23,7 +23,48 @@
 
 <body>
     <header>
-        <h1>hello</h1>
+        <nav class="navbar navbar-expand-lg navbar-dark  container  mx-auto">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <!-- navbar logo (down) -->
+                    <img src="img/logo.png " alt="logo" class="img-fluid w-50">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link nav-font " aria-current="page" href="#">HOME</a>
+                        </li>
+                        <li class="nav-item nav-font">
+                            <a class="nav-link" href="#">SERVICES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-font" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-font" href="#">WORK</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-font" href="#">TEAM</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-font" href="#">PRICING</a>
+                        </li>
+                        <li class="nav-item nav-font">
+                            <a class="nav-link" href="#">STATS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-font" href="#">CONTACTS</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
 
