--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="">
         <nav class="navbar navbar-expand-lg navbar-dark  container  mx-auto">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
@@ -65,6 +65,12 @@
                 </div>
             </div>
         </nav>
+        <!--  border border-danger   -->
+        <div class="border border-danger d-flex flex-column justify-content-center align-items-center h-75 banner">
+            <h1 class="text-light text-center">WATCH OUT<br>
+                THE MODERN RESPONSIVE WEBSITE!</h1>
+            <button type="button" class="btn btn-outline-light">VIEW OUR WORK</button>
+        </div>
     </header>
 
 
