--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </nav>
         <!--  border border-danger   -->
-        <div class="border border-danger d-flex flex-column justify-content-center align-items-center h-75 banner">
+        <div class="d-flex flex-column justify-content-center align-items-center h-75 banner">
             <h1 class="text-light text-center">WATCH OUT<br>
                 THE MODERN RESPONSIVE WEBSITE!</h1>
             <button type="button" class="btn btn-outline-light">VIEW OUR WORK</button>
