--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <!-- bootstrap 5 css file added here(down) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <!-- font awsome added here (down) -->
+    <script src="https://kit.fontawesome.com/f693b0aab7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -72,6 +73,52 @@
             <button type="button" class="btn btn-outline-light">VIEW OUR WORK</button>
         </div>
     </header>
+    <main>
+        <!-- this section is for services area (down) -->
+        <section id="services" class="container-fluid bg-light " style="height: 100vh;">
+            <!-- section title -->
+            <h1 class="text-center" id="service-heading">SERVICES</h1>
+            <div class="border-1">
+                <!-- used this div to give an outline -->
+            </div>
+            <!-- this div(down) will be used for grid display  -->
+            <div class="container">
+                <!-- first row here  -->
+                <div class="row">
+                    <div class="col col-lg-4 col-12">
+                        <h4 class="fw-light">WEB DESIGN</h1>
+                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                    </div>
+                    <div class="col col-lg-4 col-12">
+                        <h4 class="fw-light">WEB DEVELOPMENT</h1>
+                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                    </div>
+                    <div class="col col-lg-4 col-12">
+                        <h4 class="fw-light">MOBILE APPS</h1>
+                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col col-lg-4 col-12">
+                        <h4 class="fw-light text-uppercase">SEO Optimization</h1>
+                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                    </div>
+                    <div class="col col-lg-4 col-12">
+                        <h4 class="fw-light">UX DESIGN</h1>
+                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                    </div>
+                    <div class="col col-lg-4 col-12">
+                        <h4 class="fw-light text-uppercase">Support</h1>
+                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+    </main>
 
 
 
