--- a/index.html
+++ b/index.html
@@ -75,42 +75,98 @@
     </header>
     <main>
         <!-- this section is for services area (down) -->
-        <section id="services" class="container-fluid bg-light " style="height: 100vh;">
+        <section id="services" class="container-fluid bg-light my-5 " style="height: 100vh;">
             <!-- section title -->
             <h1 class="text-center" id="service-heading">SERVICES</h1>
-            <div class="border-1">
+            <div class="border-1 my-5">
                 <!-- used this div to give an outline -->
             </div>
             <!-- this div(down) will be used for grid display  -->
-            <div class="container">
+            <div class="container my-5 ">
                 <!-- first row here  -->
-                <div class="row">
+                <div class="row  ">
                     <div class="col col-lg-4 col-12">
-                        <h4 class="fw-light">WEB DESIGN</h1>
-                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                        <!-- this div (down) is for sperating icon and title using flex  -->
+                        <div class="d-flex row">
+                            <!-- this div is for icon -->
+                            <div class="d-flex align-items-center justify-content-center col col-lg-4 col-6">
+                                <i class="fas fa-marker icon"></i>
+                            </div>
+                            <!-- this div is for tittle  -->
+                            <div class=" col col-lg-8 col-6">
+                                <h4 class="fw-light">WEB DESIGN</h1>
+                                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col col-lg-4 col-12">
-                        <h4 class="fw-light">WEB DEVELOPMENT</h1>
-                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                        <div class="d-flex row">
+                            <!-- this div is for icon -->
+                            <div class="d-flex align-items-center justify-content-center   col col-lg-4 col-6">
+                                <i class="fas fa-laptop-code icon"></i>
+                            </div>
+                            <!-- this div is for tittle  -->
+                            <div class="col col-lg-8 col-6">
+                                <h4 class="fw-light">WEB DEVELOPMENT</h1>
+                                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col col-lg-4 col-12">
-                        <h4 class="fw-light">MOBILE APPS</h1>
-                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                        <div class="row">
+                            <!-- this div is for icon -->
+                            <div class="d-flex align-items-center justify-content-center col col-lg-4 ">
+                                <i class="fas fa-mobile icon"></i>
+                            </div>
+                            <!-- this div is for tittle  -->
+                            <div class="col col-lg-8">
+                                <h4 class="fw-light">MOBILE APPS</h1>
+                                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
-                <div class="row">
+                <div class="row  ">
                     <div class="col col-lg-4 col-12">
-                        <h4 class="fw-light text-uppercase">SEO Optimization</h1>
-                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                        <!-- this div (down) is for sperating icon and title using flex  -->
+                        <div class="d-flex row">
+                            <!-- this div is for icon -->
+                            <div class="d-flex align-items-center justify-content-center col col-lg-4">
+                                <i class="fas fa-search icon"></i>
+                            </div>
+                            <!-- this div is for tittle  -->
+                            <div class=" col col-lg-8">
+                                <h4 class="fw-light">SEO OPTIMIZATION</h1>
+                                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col col-lg-4 col-12">
-                        <h4 class="fw-light">UX DESIGN</h1>
-                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                        <div class="d-flex row">
+                            <!-- this div is for icon -->
+                            <div class="d-flex align-items-center justify-content-center   col col-lg-4">
+                                <i class="fas fa-pencil-ruler icon"></i>
+                            </div>
+                            <!-- this div is for tittle  -->
+                            <div class="col col-lg-8">
+                                <h4 class="fw-light">UI UX DESIGN</h1>
+                                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col col-lg-4 col-12">
-                        <h4 class="fw-light text-uppercase">Support</h1>
-                            <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                        <div class="row">
+                            <!-- this div is for icon -->
+                            <div class="d-flex align-items-center justify-content-center col col-lg-4 ">
+                                <i class="fas fa-life-ring icon "></i>
+                            </div>
+                            <!-- this div is for tittle  -->
+                            <div class="col col-lg-8">
+                                <h4 class="fw-light">SUPPORT</h1>
+                                    <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
