work section done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteThis</title>
+    <!-- css animation link added here  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- google font link (down) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,10 +77,10 @@
     </header>
     <main>
         <!-- this section is for services area (down) -->
-        <section id="services" class="container-fluid bg-light my-5 " style="height: 100vh;">
+        <section id="services" class="container-fluid bg-light my-5 " style="">
             <!-- section title -->
             <h1 class="text-center" id="service-heading">SERVICES</h1>
-            <div class="border-1 my-5">
+            <div class="border-1 ">
                 <!-- used this div to give an outline -->
             </div>
             <!-- this div(down) will be used for grid display  -->
@@ -170,6 +172,28 @@
                     </div>
 
                 </div>
+
+            </div>
+
+        </section>
+
+        <section id="work" class="container-fluid mb-5">
+            <!-- this section belong to work section  -->
+            <!-- i will use grid to display the image  -->
+            <h1 class="text-center">OUR WORK</h1>
+            <div class="border-1 ">
+                <!-- used this div to give an outline -->
+            </div>
+            <!-- image section  -->
+            <div class="row row-cols-lg-4 row-cols-1 mt-5 g-lg-0">
+                <img class="" src="img/work/1.jpg">
+                <img src="img/work/2.jpg">
+                <img src="img/work/3.jpg">
+                <img src="img/work/4.jpg">
+                <img src="img/work/5.jpg">
+                <img src="img/work/6.jpg">
+                <img src="img/work/7.jpg">
+                <img src="img/work/8.jpg">
 
             </div>
 
