fixed css of work section

--- a/index.html
+++ b/index.html
@@ -186,14 +186,32 @@
             </div>
             <!-- image section  -->
             <div class="row row-cols-lg-4 row-cols-1 mt-5 g-lg-0">
-                <img class="" src="img/work/1.jpg">
-                <img src="img/work/2.jpg">
-                <img src="img/work/3.jpg">
-                <img src="img/work/4.jpg">
-                <img src="img/work/5.jpg">
-                <img src="img/work/6.jpg">
-                <img src="img/work/7.jpg">
-                <img src="img/work/8.jpg">
+                <div class="work-img-container">
+                    <img class="work-img" src="img/work/1.jpg">
+                </div>
+                <div class="work-img-container">
+                    <img class="work-img" src="img/work/2.jpg">
+                </div>
+                <div class="work-img-container">
+                    <img class="work-img" src="img/work/3.jpg">
+                </div>
+                <div class="work-img-container">
+                    <img class="work-img" src="img/work/4.jpg">
+                </div>
+                <div class="work-img-container">
+                    <img class="work-img" src="img/work/5.jpg">
+                </div>
+                <div class="work-img-container">
+                    <img class="work-img" src="img/work/6.jpg">
+                </div>
+                <div class="work-img-container">
+                    <img class="work-img" src="img/work/7.jpg">
+                </div>
+                <div class="work-img-container">
+                    <img class="work-img" src="img/work/8.jpg">
+                </div>
+
+
 
             </div>
 
